# QuSpin-Core

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  coverage.yml
src/quspin_core/: __init__.py  _version.cpp  array.cpp
src/quspin_core/_submodules/: array.cpp  array.h
test/: test_array.py  test_version.py
