[project]
name = "quspin-core"
version = "0.1.0"
description = "C++ extension for exact representations of sparse quantum operators"
authors = [
    {name = "Phillip Weinberg", email = "weinbe58@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "BDS-3"}

[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.12.0", "meson>=1.5.2", "ninja>=1.10.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ""

build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = 1
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]

before-all = ""
before-build = ""
repair-wheel-command = ""

before-test = ""
test-command = "pytest {project}/test"
test-requires = ["pytest"]
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
manylinux-pypy_i686-image = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"

musllinux-x86_64-image = "musllinux_1_1"
musllinux-i686-image = "musllinux_1_1"
musllinux-aarch64-image = "musllinux_1_1"
musllinux-ppc64le-image = "musllinux_1_1"
musllinux-s390x-image = "musllinux_1_1"


[tool.cibuildwheel.linux]
archs = ["native"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["native"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["native"]
